--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,6 +10,7 @@ activityCompose = "1.12.3"
 composeBom = "2024.09.00"
 navigationCompose = "2.7.6"
 lifecycleViewModelCompose = "2.7.0"
+lifecycleRuntimeCompose = "2.10.0"
 room = "2.6.1"
 ksp = "2.0.21-1.0.25"
 coroutines = "1.7.3"
@@ -35,6 +36,7 @@ androidx-navigation-compose = { group = "androidx.navigation", name = "navigatio
 
 # Lifecycle / ViewModel
 androidx-lifecycle-viewmodel-compose = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "lifecycleViewModelCompose" }
+androidx-lifecycle-runtime-compose = { group = "androidx.lifecycle", name = "lifecycle-runtime-compose", version.ref = "lifecycleRuntimeCompose" }
 
 # Room
 androidx-room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room" }
